--- a/DEW/UT04-01-PRUEBAS/style.css
+++ b/DEW/UT04-01-PRUEBAS/style.css
@@ -46,14 +46,22 @@ label {
 select, textarea {
     display: block;
     width: 100%;
-    margin-bottom: 20px;
-    padding: 12px;
-    font-size: 16px;
+    margin-bottom: 10px;
+    padding: 8px;
+    font-size: 1em;
     border: 1px solid #ccc;
     border-radius: 6px;
     box-sizing: border-box;
     background-color: #fafafa;
     transition: border-color 0.3s ease;
+}
+
+select#dniTipo {
+    width: 5em;
+}
+
+select#nacimiento {
+    width: 12em;
 }
 
 select:focus, textarea:focus {
