--- a/mi-proyecto-react/proyecto-react-vite-prueba/src/App.css
+++ b/mi-proyecto-react/proyecto-react-vite-prueba/src/App.css
@@ -3,6 +3,14 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100%;
+    font: Inter;
+    font-size: 13pt;
 }
 
 .logo {
@@ -33,6 +41,10 @@
   }
 }
 
+ul {
+  list-style-type: none;
+  padding: 0;
+}
 .card {
   padding: 2em;
 }
