--- a/mi-proyecto-react/proyecto-react-vite-prueba/src/App.css
+++ b/mi-proyecto-react/proyecto-react-vite-prueba/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -8,8 +10,12 @@
   align-items: center;
   justify-content: center;
   min-height: 100%;
-  font: Inter;
+  font-family: 'Inter', sans-serif;
+
   font-size: 13pt;
+}
+html, body {
+  height: 100%;
 }
 
 .logo {
