--- a/mi-proyecto-react/proyecto-react-vite-prueba/src/App.css
+++ b/mi-proyecto-react/proyecto-react-vite-prueba/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
+html, body {
+  height: 100%;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -11,11 +15,7 @@
   justify-content: center;
   min-height: 100%;
   font-family: 'Inter', sans-serif;
-
   font-size: 13pt;
-}
-html, body {
-  height: 100%;
 }
 
 .logo {
@@ -51,6 +51,15 @@ html, body {
 ul {
   list-style-type: none;
   padding: 0;
+  align-self: center;
+  justify-content: center;
+}
+
+ul li {
+  padding: 0.2em;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .card {
@@ -78,15 +87,22 @@ table td {
   padding: 0.5em;
 }
 
-
 .error {
-  color: #ae2323; 
-  font-size: 0.8em; 
-  margin-top: 5px; 
+  color: #c62e2e;
+  font-size: 0.8em;
+  margin-top: 5px;
 }
-
 
 input:invalid, select:invalid {
-  border-color: #ae2323; 
+  border-color: #c62e2e;
 }
 
+.boton-borrar {
+  background-color: #c62e2e;
+  padding: 0.4em;
+}
+
+.boton-enviar,
+.boton-actualizar {
+  margin: 0.4em;
+}
